fix dark mode button plain css

--- a/packages/document/docs/.vitepress/theme/custom.css
+++ b/packages/document/docs/.vitepress/theme/custom.css
@@ -1,4 +1,5 @@
 :root {
+  --vp-c-white-mute: #fff;
   --vp-c-blue-light: #1772b4;
 }
 
